--- a/percobaan.html
+++ b/percobaan.html
@@ -5,7 +5,7 @@
     <div style="margin: 200px auto; padding: 20px; border: 1px solid black; text-align: center; width: 300px; box-shadow: 0px 0px 5px black; border-radius: 5px;"> 
         <img src="assets\img\photo_6077626720002882774_y.jpg" style="width: 100%; object-fit: cover; border-radius: 5px;">
         <h1>Reza Liswara</h1>
-        <p>Halo nama saya Reza Liswara, saya sedang belajar hehehe</p>
+        <p>Halo nama saya Reza Liswara, saya sedang belajar menjadi seorang Fullstack Developer</p>
         <table border="1" style="width: 100%">
         <tr>
             <th>Experience</th>
