--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
                     <img src="assets\img\dumbways.png" class="navbar-logo">
                 </li>
                 <li>
-                    <a href="index.html" class="navbar-link" style="font-weight: bold;">Home</a>
+                    <a href="index.html" class="navbar-link-active">Home</a>
                 </li>
                 <li>
-                    <a href ="#" class="navbar-link">My Project</a>
+                    <a href ="my project.html" class="navbar-link">My Project</a>
                 </li>
             </div>
             <div class="navbar-right">
@@ -43,9 +43,9 @@
                 </p>
                 
                 <div style="display: flex;">
-                    <div style="width: 100px; height: 30px;">
+                    <div style="width: 160px; height: 30px;">
                         <a href="https://drive.google.com/file/d/1kwx53Tce7dOa4_HpVpYtK1jjDtCGc8U9/view?usp=sharing" target="_blank">
-                            <i class="fa fa-file"> My CV</i>
+                            <i class="fa fa-file"> Curriculum Vitae</i>
                         </a>    
                     </div>
                     <div class="contact">
