Tugas Day 7 - OOP

--- a/my project.html
+++ b/my project.html
@@ -22,6 +22,9 @@
                 <li>
                     <a href ="my project.html" class="navbar-link active">My Project</a>
                 </li>
+                <li>
+                    <a href="testimoni.html" class="navbar-link"> Testimonial </a>
+                </li>
             </div>
             <div class="navbar-right">
                 <li>
@@ -33,6 +36,7 @@
         <div id="hamburger-navbar-container" class="hamburger-navbar-container hidden">
             <a class="hamburger-navbar-link" href="index.html">Home</a>
             <a class="hamburger-navbar-link  hamburger-active" href="my project.html">My Project</a>
+            <a class="hamburger-navbar-link" href="testimoni.html">Testimonial</a>
             <a class="hamburger-navbar-link" href="contact.html">Contact Me</a>
         </div>
     </nav>  
