--- a/testimoni.html
+++ b/testimoni.html
@@ -46,11 +46,33 @@
 
     <div class="container">
         <h1>Testimonials</h1>
+        <div class="container-rating">
+            <h2> Rating By Star</h2>
+            <div class="rating">
+                <button class="rating-btn" onclick="allTestimonial()">
+                    All
+                </button>
+                <button class="rating-btn" onclick="filterTestimonial(1)">
+                    1 <i class="fa-solid fa-star"></i>
+                </button>
+                <button class="rating-btn" onclick="filterTestimonial(2)">
+                    2 <i class="fa-solid fa-star"></i>
+                </button>
+                <button class="rating-btn" onclick="filterTestimonial(3)">
+                    3 <i class="fa-solid fa-star"></i>
+                </button>
+                <button class="rating-btn" onclick="filterTestimonial(4)">
+                    4 <i class="fa-solid fa-star"></i>
+                </button>
+                <button class="rating-btn" onclick="filterTestimonial(5)">
+                    5 <i class="fa-solid fa-star"></i>
+                </button>
+            </div>
+        </div>
         <section class="testimonials" id="testimonials">
 
         </section>
     </div>
-    <script src="assets/js/index.js"></script>
     <script src="assets/js/nav.js"></script>
     <script src="assets/js/testimoni.js"></script>
 </body>
