Tugas Day 9 - Ajax, Promises, & Async Await

--- a/testimoni.html
+++ b/testimoni.html
@@ -74,7 +74,7 @@
         </section>
     </div>
     <script src="assets/js/nav.js"></script>
-    <script src="assets/js/testimoni.js"></script>
+    <script src="assets/js/ajax testimonial.js"></script>
 </body>
 
 </html>
