--- a/contact.html
+++ b/contact.html
@@ -4,68 +4,83 @@
 <head>
     <title>Contact Me</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets\css\contact.css" />
+    <!-- <link rel="stylesheet" href="assets\css\contact.css" /> -->
     <link rel="stylesheet" href="assets\css\index.css" />
-    <link rel="stylesheet" href="assets\css\nav.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
+    <!-- <link rel="stylesheet" href="assets\css\nav.css" /> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 </head>
-<body>
-    <nav class="navbar">
-        <ul class="navbar-ul">
-            <div class="navbar-left">
-                <li>
-                    <img src="assets\img\dumbways.png" class="navbar-logo">
-                </li>
-                <li>
-                    <a href="index.html" class="navbar-link">Home</a>
-                </li>
-                <li>
-                    <a href ="my project.html" class="navbar-link">My Project</a>
-                </li>
-                <li>
-                    <a href="testimoni.html" class="navbar-link"> Testimonial </a>
-                </li>
-            </div>
-            <div class="navbar-right">
-                <li>
-                    <a href="contact.html" class="navbar-contact-btn">Contact Me</a>
-                </li>
-                <i class="fa-solid fa-bars fa-2x" style="cursor: pointer;" id="hamburger-button"
-            onclick="openHamburger()"></i>
-            </div>
-        </ul>
-        <div id="hamburger-navbar-container" class="hamburger-navbar-container hidden">
-            <a class="hamburger-navbar-link" href="index.html">Home</a>
-            <a class="hamburger-navbar-link" href="my project.html">My Project</a>
-            <a class="hamburger-navbar-link" href="testimoni.html">Testimonial</a>
-            <a class="hamburger-navbar-link hamburger-active" href="contact.html">Contact Me</a>
-        </div>
-    </nav>
 
-    <div style="display: flex; width: 100%; justify-content: center; margin-top: 20px; ">
-        <div style="display: flex; flex-direction: column; width: 300px; justify-content: center;">
-            <h2 style="text-align: center;">GET IN TOUCH</h2>
-            <label class="label-name" for="nama">Name</label>
-            <input class="input-style" id="nama"/>
-            <label class="label-name" for="email">Email</label>
-            <input class="input-style" id="email" />
-            <label class="label-name" for="nomor">Phone Number</label>
-            <input class="input-style" id="nomor"/>
-            <label class="label-name">Subject</label>
-            <select class="input-style" id="subject">
-                <option></option>
-                <option>Frontend Developer</option>
-                <option>Backend Developer</option>
-                <option>Fullstack Developer</option>
-            </select>
-            <label class="label-name" for="message">Your Message</label>
-            <textarea class="input-message" id="message"></textarea>
-            <button class="btn-submit" onclick="submitData()">submit</button>
+<body>
+<nav class="navbar navbar-expand-lg bg-body-tertiary px-5">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+            <img src="assets/img/dumbways.png" alt="Logo" class="navbar-logo" style="width:50px">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="my project.html">My Project</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="testimoni.html">Testimonial</a>
+                </li>
+            </ul>
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <a class="btn btn-dark d-none d-lg-inline" href="contact.html">Contact Me</a>
+                    <a class="nav-link d-lg-none active" href="contact.html">Contact Me</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
+<div class="container d-flex justify-content-center align-items-center vh-100 mt-3">
+        <div class="w-50">
+            <form onsubmit="return validateForm()" id="contactForm">
+                <h2 style="text-align: center;">GET IN TOUCH</h2>
+                <div class="mb-3">
+                    <label for="name" class="font-style">Name</label>
+                    <input type="text" class="form-control" id="name" required />
+                </div>
+                <div class="mb-3">  
+                    <label for="email" class="font-style">Email</label>
+                    <input type="email" class="form-control" id="email" pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.(com|co\.id|net|org)" required />
+                    <div id="emailError" class="text-danger"></div>
+                </div>
+                <div class="mb-3">
+                    <label for="phone_number" class="font-style">Phone Number</label>
+                    <input type="tel" class="form-control" id="phone_number" pattern="[0-9]+" required />
+                    <div id="phoneError" class="text-danger"></div>
+                </div>
+                <label class="font-style">Subject</label>
+                <select class="form-select mb-3" aria-label="Default select example" id="subject" required>
+                    <option selected disabled value="">Open this to select subject</option>
+                    <option value="1">Frontend Developer</option>
+                    <option value="2">Backend Developer</option>
+                    <option value="3">Fullstack Developer</option>
+                </select>
+                <div class="mb-3">
+                    <label for="message" class="font-style">Message</label>
+                    <textarea class="form-control" id="message" required></textarea>
+                </div>
+                <div class="text-end">
+                    <button type="submit" class="btn btn-dark">Submit</button>
+                </div>
+            </form>
         </div>
     </div>
 
     <script src="assets/js/contact.js"></script>
-    <script src="assets/js/nav.js"></script>
 </body>
 
 </html>
